# terralite

./: .gitignore  BUILD.md  STEAM.md  index.html  package-lock.json  package.json  vite.config.ts
.github/workflows/: build.yml  deploy.yml
public/: iron-ore-preview.html  manifest.webmanifest
src/: App.tsx  CheatMenu.tsx  EndingSequence.tsx  Landing.tsx  LanguagePicker.tsx  MobileGate.tsx  audio.ts  engine.ts  i18n.ts  index.css  main.tsx  mobileFullscreen.ts  pixart.ts  sprites.ts  world.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs
steam/scripts/: app_build.vdf  depot_linux.vdf  depot_windows.vdf
